--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -177,6 +177,50 @@
   }
 </style>
 
+
+<app-miresponsive-data [plantilla]="true" [base]="base" [dataList]="data"> 
+        
+  <ng-template #content let-datos>
+      <div style="display: flex;flex-direction: column;">
+          <span>{{datos.name}}</span>
+          <span>{{datos.edad}}</span>
+      </div>
+    </ng-template>
+
+    <ng-template #action let-datos>
+      <button mat-icon-button color="accent" (click)="datos.action(datos)">
+      Delete
+    </button>
+    </ng-template>
+
+</app-miresponsive-data>
+
+
+<ng-template #base>
+  <table mat-table [dataSource]="data" class="mat-elevation-z8">
+
+    <!-- Position Column -->
+    <ng-container matColumnDef="name">
+      <th mat-header-cell *matHeaderCellDef> Nombre </th>
+      <td mat-cell *matCellDef="let element"> {{element.name}} </td>
+    </ng-container>
+  
+    <!-- Name Column -->
+    <ng-container matColumnDef="edad">
+      <th mat-header-cell *matHeaderCellDef> edad </th>
+      <td mat-cell *matCellDef="let element"> {{element.edad}} </td>
+    </ng-container>
+
+    
+  
+    <tr mat-header-row *matHeaderRowDef="['name','edad']"></tr>
+    <tr mat-row *matRowDef="let row; columns: ['name','edad'];"></tr>
+  </table>
+  
+  
+</ng-template>
+
+
 <main class="main">
   <div class="content">
     <div class="left-side">
